--- a/templates/quotes/home.html
+++ b/templates/quotes/home.html
@@ -5,6 +5,36 @@ Stock Portfolio
 {% endblock %}
 
 {% block content %}
-This is home page.
+    <br>
+    {% if stocks and not stocks.Error %}
+        <h3>{{stocks.companyName}}</h3>
+        <ul>
+            <li>Symbol : {{stocks.symbol}}</li>
+            <li>Primary Exchange : {{stocks.primaryExchange}}</li>
+            <li>Open : {{stocks.open}}</li>
+            <li>Close : {{stocks.close}}</li>
+            <li>High : {{stocks.high}}</li>
+            <li>Low : {{stocks.low}}</li>
+            <li>Latest Price : {{stocks.latestPrice}}</li>
+            <li>Previous Close : {{stocks.previousClose}}</li>
+            <li>Market Cap :{{stocks.marketCap}}</li>
+            <li>PE Ratio : {{stocks.peRatio}}</li>
+            <li>Week52High : {{stocks.week52High}}</li>
+            <li>Week52Low : {{stocks.week52Low}}</li>
+            <li>YTD Change : {{stocks.ytdChange}}</li>
+        </ul>
+    {% elif stocks.Error %}
+        <p>{{stocks.Error}}</p>
+    {% else %}
+        <div class="jumbotron">
+            <h1 class="display-4">Welcome to Stock Portfolio</h1>
+            <p class="lead">Simple, yet powerful app which allows you to manage your stock portfolio !</p>
+            <hr class="my-4">
+            <p>It uses API integration for getting real time stock information.</p>
+            <p class="lead">
+            <a class="btn btn-primary btn-lg" href="#" role="button">Let's get started</a>
+            </p>
+        </div>
+    {% endif%}
 {% endblock %}
 
