stock model and migrations

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
   </title>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Stock Portfolio</a>
+        <a class="navbar-brand" href="{% url 'home' %}">Stock Portfolio</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -24,6 +24,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'home' %}">Home<span class="sr-only">(current)</span></a>
               </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'add_stock' %}">Add Stock<span class="sr-only">(current)</span></a>
+            </li>
             <li class="nav-item">
               <a class="nav-link" href="{% url 'about' %}">About<span class="sr-only">(current)</span></a>
             </li>
