--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
           <form method="POST" action="{% url 'home' %}" class="form-inline my-2 my-lg-0">
             {% csrf_token %}
             <input class="form-control mr-sm-2" type="search" placeholder="Stock Ticker or Name" aria-label="Search" name="stock_ticker">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Quick Search</button>
           </form>
         </div>
     </nav>
