--- a/templates/quotes/home.html
+++ b/templates/quotes/home.html
@@ -32,7 +32,7 @@ Stock Portfolio
             <hr class="my-4">
             <p>It uses API integration for getting real time stock information.</p>
             <p class="lead">
-            <a class="btn btn-primary btn-lg" href="#" role="button">Let's get started</a>
+            <a class="btn btn-primary btn-lg" href="{% url 'add_stock' %}" role="button">Let's get started</a>
             </p>
         </div>
     {% endif%}
