--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
                 <a class="nav-link" href="{% url 'home' %}">Home<span class="sr-only">(current)</span></a>
               </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'add_stock' %}">Add Stock<span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="{% url 'portfolio' %}">Portfolio<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{% url 'about' %}">About<span class="sr-only">(current)</span></a>
