--- a/templates/quotes/home.html
+++ b/templates/quotes/home.html
@@ -30,9 +30,9 @@ Stock Portfolio
             <h1 class="display-4">Welcome to Stock Portfolio</h1>
             <p class="lead">Simple, yet powerful app which allows you to manage your stock portfolio !</p>
             <hr class="my-4">
-            <p>It uses API integration for getting real time stock information.</p>
+            <p>It uses API integration for getting real time stock information on the fly.</p>
             <p class="lead">
-            <a class="btn btn-primary btn-lg" href="{% url 'portfolio' %}" role="button">Let's get started</a>
+            <a class="btn btn-success btn-lg" href="{% url 'portfolio' %}" role="button">Let's get started</a>
             </p>
         </div>
     {% endif%}
